--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vueuse/core": "^9.13.0",
     "esbuild-darwin-arm64": "^0.15.18",
+    "firebase": "^9.17.2",
     "pinia": "^2.0.32",
     "roboto-fontface": "*",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vuefire": "^3.1.0",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
