--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@vueuse/core": "^9.13.0",
+    "bulma": "^0.9.4",
     "esbuild-darwin-arm64": "^0.15.18",
     "firebase": "^9.17.2",
     "pinia": "^2.0.32",
