--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.17.2",
     "pinia": "^2.0.32",
     "roboto-fontface": "*",
+    "sweetalert2": "^11.7.3",
     "uuid": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
