--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "roboto-fontface": "*",
     "sweetalert2": "^11.7.3",
     "uuid": "^9.0.0",
+    "vee-validate": "^4.8.6",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuefire": "^3.1.0",
