--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^9.13.0",
     "bulma": "^0.9.4",
     "esbuild-darwin-arm64": "^0.15.18",
@@ -25,6 +27,7 @@
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuefire": "^3.1.0",
+    "vuelidate": "^0.7.7",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
